PR c++/18384, c++/18327

PR c++/18384, c++/18327
	* decl.c (reshape_init_array): Use UHWI type for max_index_cst
	and index.  Convert max_index to size_type_node if it isn't
	host_integerp (, 1).

	* g++.dg/init/array18.C: New test.

From-SVN: r92682